Moved version number into the login page.

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -5,6 +5,8 @@
 <title>Login</title>
 </head>
 <body>
+	<h2>FAIMS test of large file upload</h2>
+	<p>V2.0</p>
 	<form method=post action="j_security_check">
 		<p>
 			<span>Username:</span> <br /> <input type="text" name="j_username">
