Added the user names and passwords to the login screen - not normal security practice :)

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -9,10 +9,10 @@
 	<p>V2.0</p>
 	<form method=post action="j_security_check">
 		<p>
-			<span>Username:</span> <br /> <input type="text" name="j_username">
+			<span>Username:</span> <br /> <input type="text" name="j_username"> father | mother
 		</p>
 		<p>
-			<span>Password:</span> <br /> <input type="password" name="j_password">
+			<span>Password:</span> <br /> <input type="password" name="j_password"> bob | mary
 		</p>
 		<p>
 			<input type="submit" value="Login">
